Szachy... mozna sie ruszac wszystkim

--- a/Strony_Projekt/Style/StyleGenral/_values.scss
+++ b/Strony_Projekt/Style/StyleGenral/_values.scss
@@ -1,6 +1,6 @@
-$color1: black;
-$color2: orange;
-$color3: white;
+$color1: rgb(2, 26, 24);
+$color2: rgb(13, 197, 13);
+$color3: rgb(255, 255, 255);
 $color4: black;
 $color5: black;
 $color6: black;
