--- a/Strony_Projekt/Style/style.css
+++ b/Strony_Projekt/Style/style.css
@@ -139,7 +139,7 @@ html {
 
 body {
   width: 100vw;
-  background-color: black;
+  background-color: rgb(2, 26, 24);
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -151,7 +151,7 @@ body {
 * {
   box-sizing: border-box;
   text-align: justify;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 h1,
@@ -165,7 +165,7 @@ h5 {
 
 .header {
   width: 100vw;
-  background-color: orange;
+  background-color: rgb(13, 197, 13);
   top: 0;
   display: flex;
   justify-content: flex-end;
@@ -176,8 +176,8 @@ h5 {
   margin-right: 2em;
   width: 20vw;
   height: 10vh;
-  border: 0.7em solid orange;
-  background-color: black;
+  border: 0.7em solid rgb(13, 197, 13);
+  background-color: rgb(2, 26, 24);
   display: flex;
   flex-wrap: wrap;
   display: flex;
@@ -189,7 +189,7 @@ h5 {
 .header__menu div {
   width: 100%;
   height: 0.8vh;
-  background-color: orange;
+  background-color: rgb(13, 197, 13);
 }
 .header__menu:hover {
   background-color: orange;
@@ -198,8 +198,8 @@ h5 {
 .header__menu--open {
   width: 550px;
   height: auto;
-  background-color: black;
-  border: 0.7em solid orange;
+  background-color: rgb(2, 26, 24);
+  border: 0.7em solid rgb(13, 197, 13);
   display: none;
   z-index: 10;
   flex-wrap: wrap;
@@ -216,7 +216,7 @@ h5 {
   gap: 8vh;
 }
 .header__menu--open ul li {
-  border-bottom: 2px solid orange;
+  border-bottom: 2px solid rgb(13, 197, 13);
 }
 .header__menu--open ul li button {
   box-shadow: 0px 1px 0px 0px #031879;
@@ -250,7 +250,7 @@ h5 {
 footer {
   width: 100vw;
   height: 15vh;
-  background-color: orange;
+  background-color: rgb(13, 197, 13);
 }
 
 #maze {
